Replace 'THE ETERNAL DEADLINE' with 'WORST ALARM CLOCK'

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>THE ETERNAL DEADLINE</title>
+    <title>WORST ALARM CLOCK</title>
     <style>
         body { 
             background-color: #ffeef8; 
@@ -137,4 +137,5 @@
     renderStage();
 </script>
 </body>
+
 </html>
